# py-video-synth

./: README.md  pyproject.toml
src/: main.py  mic_wave.py
